# simple-django-htmx

./: README.md  pyproject.toml
.github/workflows/: version.yml
simple_django_htmx/: apps.py  enums.py  hx_requests.py  urls.py  utils.py  views.py
simple_django_htmx/templates/simple_django_htmx/: messages.html
simple_django_htmx/templatetags/: hx_tags.py
